# fsm_transducer

./: .gitignore  README.md  pyproject.toml
classical_nlp/: README.md
codex/: CATALOG.md  README.md  (+2 more)
src/: pyproject.toml
src/examples/: grammar.yaml  grammar_combinators.yaml  grammar_regex.yaml
src/fsm_parser/: __init__.py  __main__.py  analysis.py  arithmetic.py  blocks.py  char_blocks.py  cli.py  codex.py  combinators.py  config.py  cpp_lang.py  debug.py  fsm.py  grammar.py  imp_lang.py  json_lang.py  jssub_lang.py  labels.py  mcguffey1_gen.py  mcguffey1_lang.py  mcguffey1_lm.py  mcguffey1b_lang.py  normalization.py  pipeline.py  primer_lang.py  projection.py  pysub_lang.py  regex_compile.py  semirings.py  serialize.py  sexpr_lang.py  slots.py  tokens.py
src/tests/: test_analysis.py  test_arithmetic_lang.py  test_blocks.py  test_char_blocks.py  test_cli.py  test_codex.py  test_combinators.py  test_conditions.py  test_config.py  test_config_combinators.py  test_cpp_lang.py  test_debug.py  test_deltas.py  test_fsm.py  test_grammar.py  test_imp_lang.py  test_json_lang.py  test_jssub_lang.py  test_labels.py  test_mcguffey1_gen.py  test_mcguffey1_lang.py  test_mcguffey1_lm.py  test_mcguffey1b_lang.py  test_normalization.py  test_per_stream_normalization.py  test_pipeline.py  test_primer_lang.py  test_projection.py  test_projection_streams.py  test_pysub_lang.py  test_regex_compile.py  test_regex_oracle.py  test_scanner_advanced.py  test_semirings.py  test_sexpr_lang.py  test_slots.py  test_state_emissions.py  test_streams.py  test_tokens.py  test_transduce.py
(+137 files in other folders)
